examples/test/testpolicy8909.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8909
  namespace: namespace5
spec:
  podSelector:
    matchLabels:
      key17: value19
      key3: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value45
          key11: value24
      podSelector:
        matchLabels:
          key1: value39
